# poc-wasm-nats-platform

./: Cargo.toml  README.md
src/: main.rs
wasm/: Cargo.toml  wasm.go  wasm.rs
